[FIX] mail: fix flickering on follow button
before this commit:
hovering on follow button edge flickers string following/unfollow, this
is due to string length, unfollow is smaller then following and due to
which button width change on hover

after this commit:
flicker on follow/unfollow button will not occur, set min-width so that
button width not changed on hover

TaskId:2431295

--- a/addons/mail/static/src/components/follow_button/follow_button.scss
+++ b/addons/mail/static/src/components/follow_button/follow_button.scss
@@ -16,6 +16,12 @@
 
 .o_FollowButton_unfollow {
     color: gray('600');
+    min-width: 8rem;
+
+    &.btn {
+        padding-right: $grid-gutter-width*0.25;
+        padding-left: $grid-gutter-width*0.25;
+    }
 
     &.o-following {
         color: $green;
